src/objects/MUSW__GISSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration for GIS interface</description>
    <fields>
        <fullName>MUSW__AllowCallouts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Callouts are permitted to configured GIS REST services</description>
        <inlineHelpText>If true, callouts are permitted to call external GIS REST services (ensure they hosted as valid Remote Sites)</inlineHelpText>
        <label>Allow Callouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__GeoCodeService__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>URL for the GeoCode REST Service (include any default parameters)
eg. http://sampleserver1.arcgisonline.com/ArcGIS/rest/services/Locators/ESRI_Geocode_USA/GeocodeServer/findAddressCandidates?Address=</inlineHelpText>
        <label>DefaultGeoCodeService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__ParcelQueryFields__c</fullName>
        <defaultValue>&quot;PARCELID&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Parcel field containing the parcel number eg. Name
or PARCELID
or Name,PARCELID</inlineHelpText>
        <label>ParcelQueryFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__ParcelQueryService__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Map Server Parcel Layer Query REST Service (incl. default params) Layer must contain Parcel Number
eg. http://host/ArcGIS/rest/services/Louisville/LOJIC_LandRecords_Louisville/MapServer/0/query?returnGeometry=true&amp;geometryType=esriGeometryPoint&amp;text=</inlineHelpText>
        <label>ParcelQueryService</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Parent_Objects__c</fullName>
        <description>Comma-separated list of object API names that can be manually created via action links in the GIS Map Viewer information popup. Current map user still needs to have correct object and lookup field permissions to be able to see Create links. Specifically creatable in their profile or equivalent permission set and lookup field is visible, and not readonly.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comma-separated list of object API names that can be manually created via action links in the GIS Map Viewer information popup</inlineHelpText>
        <label>Parent Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Routing_Service_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Routing Service Available specified whether the necessary services are configured in the Directions Widget.</description>
        <inlineHelpText>Turn this ON if Route and Locator service Urls are configured in Directions Widget of GIS Map Viewer.</inlineHelpText>
        <label>Routing Service Available</label>
        <type>Checkbox</type>
    </fields>
    <label>GIS Settings</label>
</CustomObject>